--- a/public/dist-frontend/css/style.css
+++ b/public/dist-frontend/css/style.css
@@ -50,6 +50,17 @@ select {
 }
 
 
+#loader {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	background: rgba(0,0,0,0.75) url(../../1amw.gif) no-repeat center center;
+	z-index: 10000;
+}
 
 /* Top */
 .top {
